added main sections of header of website

--- a/front-end/html&css/طراحی دیجیکالا/index.html
+++ b/front-end/html&css/طراحی دیجیکالا/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <!-- Website top header(with ad bar, logo, and search bar, navbar and etc) -->
-    <header></header>
+    <header id="website_header">
+      <div id="top_ad_bar"></div>
+
+      <header id="main_header"></header>
+
+      <nav id="main_navbar"></nav>
+    </header>
 
     <!-- Website main section -->
     <main></main>
