linked index.html file to the main css file

--- a/front-end/html&css/طراحی دیجیکالا/index.html
+++ b/front-end/html&css/طراحی دیجیکالا/index.html
@@ -9,6 +9,8 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!-- linking to the main stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <!-- Website top header(with ad bar, logo, and search bar, navbar and etc) -->
