styled top and middle portion of website header

--- a/front-end/html&css/طراحی دیجیکالا/index.html
+++ b/front-end/html&css/طراحی دیجیکالا/index.html
@@ -28,21 +28,26 @@
           <img id="logo" src="assets/img/logo.svg" alt="logo" />
 
           <form id="search_form">
-            <input type="text" name="search" id="sercch_bar" />
-
             <button type="submit" id="search_btn">
               <i class="bx bx-search"></i>
             </button>
+
+            <input
+              type="text"
+              name="search"
+              id="sercch_bar"
+              placeholder="جستجو"
+            />
           </form>
         </div>
 
         <div id="login_cart_container">
           <button id="login_btn">
             <i class="bx bx-log-in"></i>
-            ورود | ثبت نام
+            <p>ورود | ثبت‌نام</p>
           </button>
 
-          <span class="vertical-seperator"></span>
+          <span class="vertical-separator"></span>
 
           <i class="bx bx-cart"></i>
         </div>
