styler the navbar section of website main header

--- a/front-end/html&css/طراحی دیجیکالا/index.html
+++ b/front-end/html&css/طراحی دیجیکالا/index.html
@@ -56,16 +56,19 @@
       <div id="website_navigation_bar">
         <nav id="main_navbar">
           <ul id="main-navigation_list">
-            <li>دسته‌بندی کالاها</li>
-            <span class="vertical-seperator"></span>
-            <li>شگفت‌انگیزها</li>
-            <li>سوپرمارکت</li>
-            <li>کارت هدیه</li>
-            <li>پرفروش ترین‌ها</li>
-            <li>تخفیف‌ها و پیشنهاد‌ها</li>
-            <span class="vertical-seperator"></span>
-            <li>سوالی دارید؟</li>
-            <li>در دیجی‌کالا بفروشید!</li>
+            <li class="medium-bold">
+              <i class="bx bx-menu"></i>
+              دسته‌بندی کالاها
+            </li>
+            <span class="vertical-separator"></span>
+            <li class="small-font">شگفت‌انگیزها</li>
+            <li class="small-font">سوپرمارکت</li>
+            <li class="small-font">کارت هدیه</li>
+            <li class="small-font">پرفروش ترین‌ها</li>
+            <li class="small-font">تخفیف‌ها و پیشنهاد‌ها</li>
+            <span class="vertical-separator"></span>
+            <li class="small-font">سوالی دارید؟</li>
+            <li class="small-font">در دیجی‌کالا بفروشید!</li>
           </ul>
         </nav>
 
