--- a/front-end/html&css/طراحی دیجیکالا/index.html
+++ b/front-end/html&css/طراحی دیجیکالا/index.html
@@ -80,7 +80,7 @@
     </header>
 
     <!-- Website main section -->
-    <main>
+    <main id="website_main">
       <div id="stories_container">
         <div class="story">
           <div class="story-img-container">
@@ -89,15 +89,14 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
-        </div>
 
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
         <div class="story">
           <div class="story-img-container">
             <img
@@ -105,15 +104,14 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
-        </div>
 
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
         <div class="story">
           <div class="story-img-container">
             <img
@@ -121,15 +119,14 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
-        </div>
 
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
         <div class="story">
           <div class="story-img-container">
             <img
@@ -137,15 +134,14 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
-        </div>
 
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
         <div class="story">
           <div class="story-img-container">
             <img
@@ -153,15 +149,14 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
-        </div>
 
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
         <div class="story">
           <div class="story-img-container">
             <img
@@ -169,15 +164,14 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
-        </div>
 
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
         <div class="story">
           <div class="story-img-container">
             <img
@@ -185,15 +179,14 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
-        </div>
 
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
         <div class="story">
           <div class="story-img-container">
             <img
@@ -201,15 +194,14 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
-        </div>
 
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
         <div class="story">
           <div class="story-img-container">
             <img
@@ -217,16 +209,151 @@
               alt="story"
               class="story-img"
             />
-
-            <p>
-              جایزه 10 میلیونی!
-              <br />
-              Ps5 Pro
-            </p>
           </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
+        </div>
+        <div class="story">
+          <div class="story-img-container">
+            <img
+              src="/assets/img/sample_story_img.jpg"
+              alt="story"
+              class="story-img"
+            />
+          </div>
+
+          <p>
+            جایزه 10 میلیونی!
+            <br />
+            Ps5 Pro
+          </p>
         </div>
 
-        <button id="stories_left_btn" class="btn btn-nav-left"></button>
+        <button id="stories_left_btn" class="btn btn-nav-left">&gt;</button>
       </div>
 
       <div id="banner_container">
