Feat: finished initial styling

--- a/front-end/html&css/طراحی دیجیکالا/index.html
+++ b/front-end/html&css/طراحی دیجیکالا/index.html
@@ -362,9 +362,9 @@
           alt="banner"
           class="banner"
         />
-
-        <button id="right_banner_btn" class="btn btn-nav-right"></button>
-        <button id="left_banner_btn" class="btn btn-nav-left"></button>
+        <span id="banner_pagination"> . . . . . </span>
+        <button id="right_banner_btn" class="btn btn-nav-right">&lt;</button>
+        <button id="left_banner_btn" class="btn btn-nav-left">&gt;</button>
       </div>
     </main>
   </body>
